--- a/pre-01/index.html
+++ b/pre-01/index.html
@@ -78,13 +78,14 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '783690216236474');
+fbq('init', '1343555506470177');
 fbq('track', 'AddToCart');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=783690216236474&ev=AddToCart&noscript=1"
+src="https://www.facebook.com/tr?id=1343555506470177&ev=AddToCart&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
+
 
 </head>
 <body> 
@@ -93,7 +94,7 @@ src="https://www.facebook.com/tr?id=783690216236474&ev=AddToCart&noscript=1"
       <div id="primeira">
         <div class="question">
           <h1>Pregunta 1</h1>
-          <p>¿Tienes más de 30 años?</p>
+          <p>¿Quieres conocer el método para despertar las 7 hormonas adelgazantes en tu cuerpo?</p>
         </div>
         <div class="answer">
           <button class="btn" onclick="segunda()">SÍ</button>
@@ -103,7 +104,7 @@ src="https://www.facebook.com/tr?id=783690216236474&ev=AddToCart&noscript=1"
       <div id="segunda" class="hide">
         <div class="question">
           <h1>Pregunta 2</h1>
-          <p>Este método te enseñará a despertar las 7 hormonas adelgazantes. ¿Quieres conocernos ahora?</p>
+          <p>¿Tienes más de 30 años?</p>
         </div>
         <div class="answer">
           <button class="btn" onclick="terceira()">SÍ</button>
@@ -113,7 +114,7 @@ src="https://www.facebook.com/tr?id=783690216236474&ev=AddToCart&noscript=1"
       <div id="terceira" class="hide">
         <div class="question">
           <h1>Pregunta 3</h1>
-          <p>Hay un número limitado de personas para ver el video. ¿Tienes la intención de ver hasta el final?</p>
+          <p>El siguiente video tiene un número limitado de reproducciones. ¿Quieres ver hasta el final?</p>
         </div>
         <div class="answer">
           <button class="btn" onclick="redirect()">SÍ</button>
@@ -134,7 +135,7 @@ src="https://www.facebook.com/tr?id=783690216236474&ev=AddToCart&noscript=1"
       document.getElementById("terceira").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://normarodriguez.online" // SEU LINK AQUI
+      location.href = "https://normarodriguez.online/pre-01/" // SEU LINK AQUI
     }
   </script>
 </body>
