--- a/pre-01/index.html
+++ b/pre-01/index.html
@@ -135,7 +135,7 @@ src="https://www.facebook.com/tr?id=1343555506470177&ev=AddToCart&noscript=1"
       document.getElementById("terceira").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://normarodriguez.online/pre-01/" // SEU LINK AQUI
+      location.href = "https://normarodriguez.online/" // SEU LINK AQUI
     }
   </script>
 </body>
